kubernetes/web_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  selector:
    app: web-app
  ports:
    - name: http
      port: 3333

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nuxt
        image: gcr.io/k8s-tutorial-217201/nuxt_app
        ports:
        - containerPort: 3333
